PROJECT (gengetopt)

INCLUDE (TestForSSTREAM)
INCLUDE (TestForSTDNamespace)

IF (NOT CMAKE_NO_ANSI_STRING_STREAM)
  ADD_DEFINITIONS (-DHAVE_SSTREAM)
ENDIF ()
IF (NOT CMAKE_NO_STD_NAMESPACE)
  ADD_DEFINITIONS (-DHAVE_NAMESPACES)
ENDIF ()

ADD_DEFINITIONS (-DPACKAGE="gengetopt" -DVERSION="2.22.4")

ADD_SUBDIRECTORY (src)
