PROJECT (specfun)

IF ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")
  SET (CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -fPIC")
  SET (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -fPIC")
  SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fPIC")
  SET (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fPIC")
ENDIF ("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "x86_64")


#IF (PLM_USE_F2C)
#  INCLUDE_DIRECTORIES (BEFORE ${F2C_INCLUDE_DIR})
#ENDIF (PLM_USE_F2C)

# For plm_fortran.h
INCLUDE_DIRECTORIES (BEFORE ${CMAKE_BINARY_DIR})

# We only need this one
SET (SPECFUN_LIBRARY_FORTRAN_SRC
  mpbdv.for
  )
SET (SPECFUN_LIBRARY_C_SRC
  mpbdv.c
  )

IF (PLM_USE_F2C)
  ADD_LIBRARY (specfun STATIC ${SPECFUN_LIBRARY_C_SRC})
ELSE (PLM_USE_F2C)
  ADD_LIBRARY (specfun STATIC ${SPECFUN_LIBRARY_FORTRAN_SRC})
ENDIF (PLM_USE_F2C)

## JAS 2011.01.24
## I have disabled this INSTALL since it would be inappropriate
## for our CPack packages to install libspecfun.a
##
IF (PLM_OLD_INSTALL_TARGETS)
  INSTALL (TARGETS specfun DESTINATION lib)
ENDIF (PLM_OLD_INSTALL_TARGETS)
